--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -89,7 +89,7 @@ dumbScenario:
 - infiltrate WOTC headquarters and destroy the reserved list
 - 'teach them how to beat #deck#'
 - fix MTGO so that it works properly
-- 'help them complete their #realbadcard# playset'
+- 'help them complete their #realBadCard# playset'
 
 announcement:
 - "#textAnnouncement#"
