reply-with-card mtgo-style headlines

--- a/src/data/grammar/headlines/components/terminating-wordlists.yaml
+++ b/src/data/grammar/headlines/components/terminating-wordlists.yaml
@@ -1,7 +1,7 @@
 {
   "planNoun": ["plan", "scheme", "strategy", "objective", "stratagem", "tactic"],
   "winWord": [
-      "wins","triumphs","victorious","crushes","dominates","absolutely destroys"
+      "wins","triumphs","victorious","crushes","dominates","wins big"
   ],
   "mtgOpinionSuggestion": ["banning", "improving", "reconsidering", "nerfing", "bolstering", "strengthening", "weakening", "questioning", "ignoring", "disregarding", "doubling-down on", "reevaluating", "reconceptualizing"],
   "descriptor": [
